richter/cypress initialize

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "ignorePatterns": ["**/test", "**/__tests__"],
+  "ignorePatterns": ["**/test", "**/__tests__", "cypress", "cypress.*"],
   "env": {
     "node": true,
     "browser": true,
