--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
+    "@mui/system": "^5.10.9",
     "concurrently": "^7.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
